--- a/Progress Steps/style.css
+++ b/Progress Steps/style.css
@@ -7,16 +7,17 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
+/* Aligning the items */
 body {
-  background-color: #f6f7fb;
   font-family: "Muli", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
   overflow: hidden;
 }
 
@@ -24,77 +25,76 @@ body {
   text-align: center;
 }
 
+/* Styling the Progress Bar */
 .progress-container {
   display: flex;
   justify-content: space-between;
   position: relative;
-  margin-bottom: 30px;
-  max-width: 100%;
   width: 350px;
+  margin-bottom: 30px;
 }
 
 .progress-container::before {
   content: "";
-  background-color: var(--line-border-empty);
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   left: 0;
+  transform: translateY(-50%);
+  background-color: var(--line-border-empty);
   height: 4px;
   width: 100%;
   z-index: -1;
 }
 
 .progress {
-  background-color: var(--line-border-fill);
+  content: "";
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   left: 0;
+  transform: translateY(-50%);
+  background-color: var(--line-border-fill);
   height: 4px;
   width: 0%;
   z-index: -1;
-  transition-duration: 0.4s;
-  transition-timing-function: ease;
 }
 
+/* Styling the Circles */
 .circle {
   background-color: #fff;
-  color: #999;
   border-radius: 50%;
+  color: #999;
+  border: 3px solid var(--line-border-empty);
   height: 30px;
   width: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 3px solid var(--line-border-empty);
-  transition-duration: 0.4s;
-  transition-timing-function: ease;
 }
 
 .circle.active {
   border-color: var(--line-border-fill);
 }
 
+/* Styling the buttons */
 .btn {
   background-color: var(--line-border-fill);
   color: #fff;
   border: 0;
-  border-radius: 6px;
+  border-radius: 1em;
+  padding: 1em 3em;
+  font-size: 1em;
   cursor: pointer;
-  padding: 8px 30px;
-  font-size: 14px;
 }
 
 .btn:active {
   transform: scale(0.98);
 }
 
-.btn:focus {
-  outline: 0;
-}
-
 .btn:disabled {
   background-color: var(--line-border-empty);
   cursor: not-allowed;
+}
+
+.btn:focus {
+  outline: 0;
 }
