--- a/Expanding Images/style.css
+++ b/Expanding Images/style.css
@@ -1,67 +1,79 @@
 @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
-
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   font-family: "Muli", sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   margin: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
 }
 
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 90vw;
 }
 
 .panel {
+  color: white;
   background-size: cover;
   background-position: center;
-  position: relative;
+  background-repeat: no-repeat;
   height: 80vh;
-  border-radius: 50px;
-  color: #fff;
+  border-radius: 1em;
   cursor: pointer;
-  flex: 0.5;
-  margin: 10px;
-  transition-duration: 700ms;
-  transition-timing-function: ease-in;
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
+  margin: 0.5em;
+  position: relative;
+  -webkit-transition: -webkit-box-flex 0.7s ease-in;
+  transition: -webkit-box-flex 0.7s ease-in;
+  transition: flex 0.7s ease-in;
+  transition: flex 0.7s ease-in, -webkit-box-flex 0.7s ease-in, -ms-flex 0.7s ease-in;
 }
 
 .panel h3 {
-  font-size: 24px;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+  font-size: 2em;
   margin: 0;
+  position: absolute;
+  bottom: 0.5em;
+  left: 0.5em;
   opacity: 0;
 }
 
 .panel.active {
-  flex: 5;
+  -webkit-box-flex: 5;
+      -ms-flex: 5;
+          flex: 5;
 }
 
 .panel.active h3 {
   opacity: 1;
-  /* transition: opactity 0.3s ease-in 0.4s; */
-  transition-property: opacity;
-  transition-duration: 300ms;
-  transition-timing-function: ease-in;
-  transition-delay: 400ms;
+  -webkit-transition: opacity 0.3s ease-in 0.4s;
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
-@media (max-width: 680px) {
+@media (max-width: 800px) {
   .container {
     width: 100vw;
   }
-
   .panel:nth-of-type(4),
   .panel:nth-of-type(5) {
     display: none;
   }
 }
+/*# sourceMappingURL=style.css.map */
